commit del proyecto numero 12

--- a/pagina_adicional.html
+++ b/pagina_adicional.html
@@ -11,17 +11,17 @@
         <body>
             <header class="cabecera">
                 <article class="cabecera__portada">
-                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__portada__logo">
+                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                 </article>
                 <nav class="cabecera__navegador">
-                    <input type="checkbox" id="casilla-menu" class="cabecera__navegador__casilla-menu">
-                    <label for="casilla-menu" class="cabecera__navegador__icono-menu">
-                        <i class="cabecera__navegador__icono-menu__barra1"></i>
-                        <i class="cabecera__navegador__icono-menu__barra2"></i>
-                        <i class="cabecera__navegador__icono-menu__barra3"></i>
+                    <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
+                    <label for="casilla-menu" class="cabecera__icono-menu">
+                        <i class="cabecera__barra1"></i>
+                        <i class="cabecera__barra2"></i>
+                        <i class="cabecera__barra3"></i>
                     </label>
-                    <ul class="cabecera__navegador__enlaces">
+                    <ul class="cabecera__enlaces">
                         <li><a href="pagina_principal.html">Pagina principal</a></li>
                         <li><a href="pagina_de_productos.html">Productos</a></li>
                         <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
@@ -33,7 +33,7 @@
                 <h2 class="cuerpo3__titulo">SONIC Y EL AUTISMO</h2>
                 <article class="cuerpo3__caja">
                     <h3 class="cuerpo3__caja__subtitulo">¿Por qué a las personas autistas les gusta Sonic?</h3>
-                    <p class="cuerpo3__caja__texto">Mucha gente está familiarizada con el personaje Sonic the Hedgehog, pero ¿sabías que es particularmente popular entre las personas autistas? De hecho, incluso existe un término para este fenómeno: "patología sónica". Si bien las razones detrás de esta afinidad no se comprenden completamente, existen algunas teorías sobre por qué las personas autistas podrían sentirse atraídas por el erizo azul.</p>
+                    <p class="cuerpo3__texto">Mucha gente está familiarizada con el personaje Sonic the Hedgehog, pero ¿sabías que es particularmente popular entre las personas autistas? De hecho, incluso existe un término para este fenómeno: "patología sónica". Si bien las razones detrás de esta afinidad no se comprenden completamente, existen algunas teorías sobre por qué las personas autistas podrían sentirse atraídas por el erizo azul.</p>
                 </article>
             </main>
             <footer class="pie">
