--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -11,17 +11,17 @@
         <body>
             <header class="cabecera">
                 <article class="cabecera__portada">
-                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__portada__logo">
+                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                 </article>
                 <nav class="cabecera__navegador">
-                    <input type="checkbox" id="casilla-menu" class="cabecera__navegador__casilla-menu">
-                    <label for="casilla-menu" class="cabecera__navegador__icono-menu">
-                        <i class="cabecera__navegador__icono-menu__barra1"></i>
-                        <i class="cabecera__navegador__icono-menu__barra2"></i>
-                        <i class="cabecera__navegador__icono-menu__barra3"></i>
+                    <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
+                    <label for="casilla-menu" class="cabecera__icono-menu">
+                        <i class="cabecera__barra1"></i>
+                        <i class="cabecera__barra2"></i>
+                        <i class="cabecera__barra3"></i>
                     </label>
-                    <ul class="cabecera__navegador__enlaces">
+                    <ul class="cabecera__enlaces">
                         <li><a href="pagina_principal.html">Pagina principal</a></li>
                         <li><a href="pagina_de_productos.html">Productos</a></li>
                         <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
@@ -32,14 +32,14 @@
             <main class="cuerpo">
                 <h2 class="cuerpo__titulo">PAGINA PRINCIPAL</h2>
                 <article class="cuerpo__caja">
-                    <h3 class="cuerpo__caja__subtitulo">Un blog de Sonic</h3>
-                    <p class="cuerpo__caja__texto">Sonic es una de las sagas de videojuegos más populares y conocidas en la historia de la humanidad desde que nacio en 1991 con el lanzamiento de su primer juego. La saga cuenta con una gran variedad de juegos y cada uno muy diferente. En Web-Sonic.com, te ofrecemos una breve explicación algunos de los juegos mas vendidos o conocidos</p>
+                    <h3 class="cuerpo__subtitulo">Un blog de Sonic</h3>
+                    <p class="cuerpo__texto">Sonic es una de las sagas de videojuegos más populares y conocidas en la historia de la humanidad desde que nacio en 1991 con el lanzamiento de su primer juego. La saga cuenta con una gran variedad de juegos y cada uno muy diferente. En Web-Sonic.com, te ofrecemos una breve explicación algunos de los juegos mas vendidos o conocidos</p>
                 </article>
                 <article class="cuerpo__caja">
-                    <h3 class="cuerpo__caja__subtitulo">¿Que es Sonic the Hedgehog?</h3>
-                    <a href="assets/img/sonic.jpg" class="cuerpo__caja__imagen-caja"><img src="assets/img/sonic.jpg" alt="Sonic" class="cuerpo__caja__imagen-caja__imagen"></a>
-                    <p class="cuerpo__caja__texto">Sonic the Hedgehog, es el protagonista principal de la saga de videojuegos del mismo nombre y la mascota de Sega. Él es un erizo antropomórfico nacido con la habilidad de correr más rápido que el sonido, de allí su nombre. Su mejor amigo es Tails</p>
-                    <p class="cuerpo__caja__texto">Desde que entró en la batalla contra la injusticia, Sonic ha sido el vencedor de la paz y es reconocido en la Tierra por haberlo salvado incontables veces. Durante sus muchas aventuras, Sonic ha viajado desde los confines del mundo hasta los confines del espacio y del tiempo, enfrentando innumerables pruebas que lo han probado al máximo, ganándose muchos títulos, aliados y el desprecio de varios enemigos. Conocido por su legendaria actitud arrogante, tranquila y un temperamento algo corto, pero con un fuerte sentido de la justicia, la compasión y el amor por la libertad y la aventura, Sonic utiliza sus habilidades para proteger a los inocentes de su mundo y del más allá de las fuerzas del mal, especialmente de su archienemigo, el Dr. Eggman, y su imperio.</p>
+                    <h3 class="cuerpo__subtitulo">¿Que es Sonic the Hedgehog?</h3>
+                    <a href="assets/img/sonic.jpg" class="cuerpo__imagen-caja"><img src="assets/img/sonic.jpg" alt="Sonic" class="cuerpo__imagen"></a>
+                    <p class="cuerpo__texto">Sonic the Hedgehog, es el protagonista principal de la saga de videojuegos del mismo nombre y la mascota de Sega. Él es un erizo antropomórfico nacido con la habilidad de correr más rápido que el sonido, de allí su nombre. Su mejor amigo es Tails</p>
+                    <p class="cuerpo__texto">Desde que entró en la batalla contra la injusticia, Sonic ha sido el vencedor de la paz y es reconocido en la Tierra por haberlo salvado incontables veces. Durante sus muchas aventuras, Sonic ha viajado desde los confines del mundo hasta los confines del espacio y del tiempo, enfrentando innumerables pruebas que lo han probado al máximo, ganándose muchos títulos, aliados y el desprecio de varios enemigos. Conocido por su legendaria actitud arrogante, tranquila y un temperamento algo corto, pero con un fuerte sentido de la justicia, la compasión y el amor por la libertad y la aventura, Sonic utiliza sus habilidades para proteger a los inocentes de su mundo y del más allá de las fuerzas del mal, especialmente de su archienemigo, el Dr. Eggman, y su imperio.</p>
                 </article>
             </main>
             <footer class="pie">
