--- a/sonic_forces.html
+++ b/sonic_forces.html
@@ -11,17 +11,17 @@
         <body>
             <header class="cabecera">
                 <article class="cabecera__portada">
-                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__portada__logo">
+                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                 </article>
                 <nav class="cabecera__navegador">
-                    <input type="checkbox" id="casilla-menu" class="cabecera__navegador__casilla-menu">
-                    <label for="casilla-menu" class="cabecera__navegador__icono-menu">
-                        <i class="cabecera__navegador__icono-menu__barra1"></i>
-                        <i class="cabecera__navegador__icono-menu__barra2"></i>
-                        <i class="cabecera__navegador__icono-menu__barra3"></i>
+                    <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
+                    <label for="casilla-menu" class="cabecera__icono-menu">
+                        <i class="cabecera__barra1"></i>
+                        <i class="cabecera__barra2"></i>
+                        <i class="cabecera__barra3"></i>
                     </label>
-                    <ul class="cabecera__navegador__enlaces">
+                    <ul class="cabecera__enlaces">
                         <li><a href="pagina_principal.html">Pagina principal</a></li>
                         <li><a href="pagina_de_productos.html">Productos</a></li>
                         <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
@@ -31,33 +31,33 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_forces.jpg"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__informacion-producto__imagen-producto"></a>
-                    <article class="cuerpo2__informacion-producto__descripcion-producto">
-                        <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic forces</h3>
-                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic Forces es un videojuego de plataformas de la serie Sonic the Hedgehog desarrollado por Sonic Team y publicado por Sega. Fue lanzado en Europa y en Norte América el 7 de Noviembre de 2017 y el 9 de noviembre del mismo año en Japón para las plataformas PC, Nintendo Switch, PlayStation 4, Xbox One, iOS y Android. Sonic Forces sigue a Sonic the Hedgehog cuando se une a una fuerza de resistencia contra el Dr. Eggman, quien se ha apoderado del mundo con la ayuda de su ejército, secuaces y un misterioso y nuevo villano conocido como Infinite.</p>
-                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">El juego marca el regreso de la colaboración entre Classic Sonic y Modern Sonic, junto con sus estilos de juego asociados, desde el juego del vigésimo aniversario Sonic Generations (aunque no es una secuela de ningún juego anterior). Además, Sonic Forces también introduce un tercer modo de juego presentando al "Avatar", el personaje creado por el jugador. El juego sirve, junto con Sonic Mania, como una "continuación" del 25 aniversario de Sonic.</p>
-                        <p><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton">volver</a></p>
+                    <a href="assets/img/sonic_forces.jpg"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__imagen-informacion-producto"></a>
+                    <article class="cuerpo2__descripcion-producto">
+                        <h3 class="cuerpo2__nombre-producto">Sonic forces</h3>
+                        <p class="cuerpo2__descripcion">Sonic Forces es un videojuego de plataformas de la serie Sonic the Hedgehog desarrollado por Sonic Team y publicado por Sega. Fue lanzado en Europa y en Norte América el 7 de Noviembre de 2017 y el 9 de noviembre del mismo año en Japón para las plataformas PC, Nintendo Switch, PlayStation 4, Xbox One, iOS y Android. Sonic Forces sigue a Sonic the Hedgehog cuando se une a una fuerza de resistencia contra el Dr. Eggman, quien se ha apoderado del mundo con la ayuda de su ejército, secuaces y un misterioso y nuevo villano conocido como Infinite.</p>
+                        <p class="cuerpo2__descripcion">El juego marca el regreso de la colaboración entre Classic Sonic y Modern Sonic, junto con sus estilos de juego asociados, desde el juego del vigésimo aniversario Sonic Generations (aunque no es una secuela de ningún juego anterior). Además, Sonic Forces también introduce un tercer modo de juego presentando al "Avatar", el personaje creado por el jugador. El juego sirve, junto con Sonic Mania, como una "continuación" del 25 aniversario de Sonic.</p>
+                        <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso">volver</a></p>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
                 <section class="cuerpo2__productos">
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_frontiers.html" class="cuerpo2__productos__producto__boton">Sonic frontiers</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_frontiers.html" class="cuerpo2__nombre-boton">Sonic frontiers</a></h3>
                     </article>
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_x_shadow_generations.html" class="cuerpo2__productos__producto__boton">Sonic y Shadow generations</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_x_shadow_generations.html" class="cuerpo2__nombre-boton">Sonic y Shadow generations</a></h3>
                     </article>
                 </section>
                 <section class="cuerpo2__productos">
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_colors.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_colors.html" class="cuerpo2__productos__producto__boton">Sonic colors</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_colors.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_colors.html" class="cuerpo2__nombre-boton">Sonic colors</a></h3>
                     </article>
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_lost_world.html" class="cuerpo2__productos__producto__boton">Sonic lost world</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_lost_world.html" class="cuerpo2__nombre-boton">Sonic lost world</a></h3>
                     </article>
                 </section>
             </main>
