--- a/sonic_unleashed.html
+++ b/sonic_unleashed.html
@@ -11,17 +11,17 @@
         <body>
             <header class="cabecera">
                 <article class="cabecera__portada">
-                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__portada__logo">
+                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                 </article>
                 <nav class="cabecera__navegador">
-                    <input type="checkbox" id="casilla-menu" class="cabecera__navegador__casilla-menu">
-                    <label for="casilla-menu" class="cabecera__navegador__icono-menu">
-                        <i class="cabecera__navegador__icono-menu__barra1"></i>
-                        <i class="cabecera__navegador__icono-menu__barra2"></i>
-                        <i class="cabecera__navegador__icono-menu__barra3"></i>
+                    <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
+                    <label for="casilla-menu" class="cabecera__icono-menu">
+                        <i class="cabecera__barra1"></i>
+                        <i class="cabecera__barra2"></i>
+                        <i class="cabecera__barra3"></i>
                     </label>
-                    <ul class="cabecera__navegador__enlaces">
+                    <ul class="cabecera__enlaces">
                         <li><a href="pagina_principal.html">Pagina principal</a></li>
                         <li><a href="pagina_de_productos.html">Productos</a></li>
                         <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
@@ -31,33 +31,33 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_unleashed.jpg"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleaashed" class="cuerpo2__informacion-producto__imagen-producto"></a>
-                    <article class="cuerpo2__informacion-producto__descripcion-producto">
-                        <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic unleashed</h3>
-                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic Unleashed, es un juego de la saga de Sonic es un juego desarrollado por Sonic Team en Japón y publicado por SEGA para múltiples plataformas siendo el juego de la serie principal de Sonic en la Wii y el último para PlayStation 2.</p>
-                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion"> El juego sigue a Sonic the Hedgehog en su intento de restaurar el mundo a la normalidad después de que su némesis, el Doctor Eggman, divide los continentes del mundo en pedazos con un arma de rayos nueva y poderosa y el poder de las Chaos Emeralds, así como sus luchas con su nueva forma de bestia generado por las Esmeraldas en estado corrupto, Sonic the Werehog. Si bien la incorporación tradicional de plataformas y la velocidad que le da la marca de Sonic, el estilo de juego para este juego es muy diferente, centrándose en el juego plataforma 2D de desplazamiento lateral representado con imágenes en 3D, así como detrás de la espalda, las fases en tercera persona, el juego a la perfección da las transiciones entre estos dos estilos. Este cambio radical en el modo de juego, junto con el foco en la velocidad extrema y el impulso (en las etapas de día), hacen de este juego sea considerado como el primer juego "moderno" de Sonic, un estilo que fue representado más adelante en Sonic Colors y Sonic Generations.</p>
-                        <p><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton">volver</a></p>
+                    <a href="assets/img/sonic_unleashed.jpg"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleaashed" class="cuerpo2__imagen-informacion-producto"></a>
+                    <article class="cuerpo2__descripcion-producto">
+                        <h3 class="cuerpo2__nombre-producto">Sonic unleashed</h3>
+                        <p class="cuerpo2__descripcion">Sonic Unleashed, es un juego de la saga de Sonic es un juego desarrollado por Sonic Team en Japón y publicado por SEGA para múltiples plataformas siendo el juego de la serie principal de Sonic en la Wii y el último para PlayStation 2.</p>
+                        <p class="cuerpo2__descripcion"> El juego sigue a Sonic the Hedgehog en su intento de restaurar el mundo a la normalidad después de que su némesis, el Doctor Eggman, divide los continentes del mundo en pedazos con un arma de rayos nueva y poderosa y el poder de las Chaos Emeralds, así como sus luchas con su nueva forma de bestia generado por las Esmeraldas en estado corrupto, Sonic the Werehog. Si bien la incorporación tradicional de plataformas y la velocidad que le da la marca de Sonic, el estilo de juego para este juego es muy diferente, centrándose en el juego plataforma 2D de desplazamiento lateral representado con imágenes en 3D, así como detrás de la espalda, las fases en tercera persona, el juego a la perfección da las transiciones entre estos dos estilos. Este cambio radical en el modo de juego, junto con el foco en la velocidad extrema y el impulso (en las etapas de día), hacen de este juego sea considerado como el primer juego "moderno" de Sonic, un estilo que fue representado más adelante en Sonic Colors y Sonic Generations.</p>
+                        <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso">volver</a></p>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
                 <section class="cuerpo2__productos">
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_frontiers.html" class="cuerpo2__productos__producto__boton">Sonic frontiers</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_frontiers.html" class="cuerpo2__nombre-boton">Sonic frontiers</a></h3>
                     </article>
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_x_shadow_generations.html" class="cuerpo2__productos__producto__boton">Sonic y Shadow generations</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_x_shadow_generations.html" class="cuerpo2__nombre-boton">Sonic y Shadow generations</a></h3>
                     </article>
                 </section>
                 <section class="cuerpo2__productos">
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_colors.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_colors.html" class="cuerpo2__productos__producto__boton">Sonic colors</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_colors.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_colors.html" class="cuerpo2__nombre-boton">Sonic colors</a></h3>
                     </article>
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_lost_world.html" class="cuerpo2__productos__producto__boton">Sonic lost world</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_lost_world.html" class="cuerpo2__nombre-boton">Sonic lost world</a></h3>
                     </article>
                 </section>
             </main>
