--- a/pagina_de_contactos.html
+++ b/pagina_de_contactos.html
@@ -11,17 +11,17 @@
         <body>
             <header class="cabecera">
                 <article class="cabecera__portada">
-                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__portada__logo">
+                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                 </article>
                 <nav class="cabecera__navegador">
-                    <input type="checkbox" id="casilla-menu" class="cabecera__navegador__casilla-menu">
-                    <label for="casilla-menu" class="cabecera__navegador__icono-menu">
-                        <i class="cabecera__navegador__icono-menu__barra1"></i>
-                        <i class="cabecera__navegador__icono-menu__barra2"></i>
-                        <i class="cabecera__navegador__icono-menu__barra3"></i>
+                    <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
+                    <label for="casilla-menu" class="cabecera__icono-menu">
+                        <i class="cabecera__barra1"></i>
+                        <i class="cabecera__barra2"></i>
+                        <i class="cabecera__barra3"></i>
                     </label>
-                    <ul class="cabecera__navegador__enlaces">
+                    <ul class="cabecera__enlaces">
                         <li><a href="pagina_principal.html">Pagina principal</a></li>
                         <li><a href="pagina_de_productos.html">Productos</a></li>
                         <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
@@ -32,53 +32,39 @@
             <main class="cuerpo">
                 <h2 class="cuerpo__titulo">PAGINA DE CONTACTOS</h2>
                 <section class="cuerpo__seccion-formulario">
-                    <h3 class="cuerpo__seccion-formulario__subtitulo">Formulario</h3>
-                    <article class="cuerpo__seccion-formulario__caja-formulario">
-                        <a href="assets/img/sonic.gif"><img src="assets/img/sonic.gif" alt="Sonic Mania" class="cuerpo__seccion-formulario__caja-formulario__imagen-formulario"></a>
-                        <form action="/submit" method="POST" class="cuerpo__seccion-formulario__caja-formulario__formulario">
-                            <label class="cuerpo__seccion-formulario__caja-formulario__formulario__campos">
-                                Nombre y apellidos
-                                <input type="text" name="nombre" class="cuerpo_">
-                            </label>
-                            <label class="cuerpo__seccion-formulario__caja-formulario__formulario__campos">
-                                Edad
-                                <input type="number" name="edad">
-                            </label>
-                            <label class="cuerpo__seccion-formulario__caja-formulario__formulario__campos">
-                                Fecha de nacimiento
-                                <input type="date" name="fecha">
-                            </label>
-                            <label class="cuerpo__seccion-formulario__caja-formulario__formulario__campos">
-                                Genero
-                                <select name="genero">
-                                    <option value="sin especificar">Sin especificar</option>
-                                    <option value="hombre">Hombre</option>
-                                    <option value="mujer">Mujer</option>
-                                </select>
-                            </label>
-                            <label class="cuerpo__seccion-formulario__caja-formulario__formulario__campos">
-                                Correo electronico
-                                <input type="text" name="correo">
-                            </label>
-                            <label class="cuerpo__seccion-formulario__caja-formulario__formulario__campo-termino">
-                                Acepto los terminos de privacidad y condiciones de servicio
-                                <input type="checkbox" name="terminos" value="terminos">
-                            </label>
-                            <label class="cuerpo__seccion-formulario__caja-formulario__formulario__campo-comfirmacion">
-                                <input type="submit" name="enviar" value="enviar formulario">
-                            </label>
-                            <label class="cuerpo__seccion-formulario__caja-formulario__formulario__campo-comfirmacion">
-                                <input type="reset" name="borrar" value="borrar formulario">
-                            </label>
+                    <h3 class="cuerpo__subtitulo-formulario">Formulario</h3>
+                    <article class="cuerpo__caja-formulario">
+                        <a href="assets/img/sonic.gif"><img src="assets/img/sonic.gif" alt="Sonic Mania" class="cuerpo__imagen-formulario"></a>
+                        <form action="/submit" method="POST" class="cuerpo__formulario">
+                            <label class="cuerpo__campos">Nombre y apellidos</label>
+                            <input type="text" name="nombre" placeholder="Escribe aqui tu nombre y apellidos" class="cuerpo__input">
+                            <label class="cuerpo__campos">Edad</label>
+                            <input type="number" name="edad" placeholder="Escribe aqui tu tu edad" class="cuerpo__input">
+                            <label class="cuerpo__campos">Fecha de nacimiento</label>
+                            <input type="date" name="fecha" placeholder="Introduce tu fecha de nacimiento" class="cuerpo__input">
+                            <label class="cuerpo__campos">Genero</label>
+                            <select name="genero" placeholder="Elige tu genero" class="cuerpo__input">
+                                <option value="sin especificar" class="cuerpo__input" placeholder="Elige tu genero">Sin especificar</option>
+                                <option value="hombre" class="cuerpo__input">Hombre</option>
+                                <option value="mujer" class="cuerpo__input">Mujer</option>
+                            </select>
+                            <label class="cuerpo__campos">Correo electronico</label>
+                            <input type="text" name="correo" placeholder="Escribe aqui tu correo electronico" class="cuerpo__input">
+                            <label class="cuerpo__campo-termino">Acepto los terminos de privacidad y condiciones de servicio</label>
+                            <input type="checkbox" name="terminos">
+                            <label class="cuerpo__campo-comfirmacion"></label>
+                            <input type="submit" name="enviar" value="enviar formulario" class="cuerpo__input">
+                            <label class="cuerpo__campo-comfirmacion"></label>
+                            <input type="reset" name="borrar" value="borrar formulario" class="cuerpo__input">
                         </form>
                     </article>
-                    <h3 class="cuerpo__seccion-formulario__subtitulo">sigueme en mis redes sociales: </h3>
-                    <nav class="cuerpo__seccion-formulario__redes">
-                        <a href="https://www.facebook.com/cesargabriel.ucha/"><img src="./assets/img/facebook_logo.png" alt="Facebook" class="cuerpo__redes__red"></a>
-                        <a href="https://www.instagram.com/ricitos2001/"><img src="./assets/img/instagram_logo.png" alt="Instagram" class="cuerpo__redes__red"></a>
-                        <a href="https://x.com/UchaCesar"><img src="./assets/img/X_logo.png" alt="X" class="cuerpo__redes__red"></a>
-                        <a href="https://www.youtube.com/@ricitos2001"><img src="./assets/img/youtube_logo.png" alt="Youtube" class="cuerpo__redes__red"></a>
-                        <a href="https://github.com/ricitos2001"><img src="./assets/img/github_logo.png" alt="Github" class="cuerpo__redes__red"></a>
+                    <h3 class="cuerpo__subtitulo-red">sigueme en mis redes sociales: </h3>
+                    <nav>
+                        <a href="https://www.facebook.com/cesargabriel.ucha/"><img src="./assets/img/facebook_logo.png" alt="Facebook" class="cuerpo__red"></a>
+                        <a href="https://www.instagram.com/ricitos2001/"><img src="./assets/img/instagram_logo.png" alt="Instagram" class="cuerpo__red"></a>
+                        <a href="https://x.com/UchaCesar"><img src="./assets/img/X_logo.png" alt="X" class="cuerpo__red"></a>
+                        <a href="https://www.youtube.com/@ricitos2001"><img src="./assets/img/youtube_logo.png" alt="Youtube" class="cuerpo__red"></a>
+                        <a href="https://github.com/ricitos2001"><img src="./assets/img/github_logo.png" alt="Github" class="cuerpo__red"></a>
                     </nav>
                 </section>
             </main>
