--- a/sonic_superstars.html
+++ b/sonic_superstars.html
@@ -11,17 +11,17 @@
         <body>
             <header class="cabecera">
                 <article class="cabecera__portada">
-                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__portada__logo">
+                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                 </article>
                 <nav class="cabecera__navegador">
-                    <input type="checkbox" id="casilla-menu" class="cabecera__navegador__casilla-menu">
-                    <label for="casilla-menu" class="cabecera__navegador__icono-menu">
-                        <i class="cabecera__navegador__icono-menu__barra1"></i>
-                        <i class="cabecera__navegador__icono-menu__barra2"></i>
-                        <i class="cabecera__navegador__icono-menu__barra3"></i>
+                    <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
+                    <label for="casilla-menu" class="cabecera__icono-menu">
+                        <i class="cabecera__barra1"></i>
+                        <i class="cabecera__barra2"></i>
+                        <i class="cabecera__barra3"></i>
                     </label>
-                    <ul class="cabecera__navegador__enlaces">
+                    <ul class="cabecera__enlaces">
                         <li><a href="pagina_principal.html">Pagina principal</a></li>
                         <li><a href="pagina_de_productos.html">Productos</a></li>
                         <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
@@ -31,33 +31,33 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__informacion-producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__informacion-producto__imagen-producto"></a>
-                    <article class="cuerpo2__informacion-producto__descripcion-producto">
-                        <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic superstars</h3>
-                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic Superstars es un videojuego de la serie Sonic the Hedgehog. Es un juego de plataformas en 2D, similar a las entradas de Sega Mega Drive, y sigue a Sonic, Tails, Amy y Knuckles mientras exploran las místicas Northstar Islands para derrotar al Dr. Eggman, quien se ha asociado con el travieso cazarrecompensas Fang the Sniper. para derrotar a los héroes.</p>
-                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">En particular, el juego contará con un nuevo personaje creado por el diseñador original de Sonic, Naoto Ōshima, y un "nuevo y misterioso adversario", aunque se desconoce si estos son personajes separados o uno en el mismo.</p>
-                        <p><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton__regreso">volver</a></p>
+                    <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__imagen-informacion-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__imagen-informacion-producto"></a>
+                    <article class="cuerpo2__descripcion-producto">
+                        <h3 class="cuerpo2__nombre-producto">Sonic superstars</h3>
+                        <p class="cuerpo2__descripcion">Sonic Superstars es un videojuego de la serie Sonic the Hedgehog. Es un juego de plataformas en 2D, similar a las entradas de Sega Mega Drive, y sigue a Sonic, Tails, Amy y Knuckles mientras exploran las místicas Northstar Islands para derrotar al Dr. Eggman, quien se ha asociado con el travieso cazarrecompensas Fang the Sniper. para derrotar a los héroes.</p>
+                        <p class="cuerpo2__descripcion">En particular, el juego contará con un nuevo personaje creado por el diseñador original de Sonic, Naoto Ōshima, y un "nuevo y misterioso adversario", aunque se desconoce si estos son personajes separados o uno en el mismo.</p>
+                        <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso__regreso">volver</a></p>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
                 <section class="cuerpo2__productos">
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_frontiers.html" class="cuerpo2__productos__producto__boton">Sonic frontiers</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_frontiers.html" class="cuerpo2__nombre-boton">Sonic frontiers</a></h3>
                     </article>
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_x_shadow_generations.html" class="cuerpo2__productos__producto__boton">Sonic y Shadow generations</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_x_shadow_generations.html" class="cuerpo2__nombre-boton">Sonic y Shadow generations</a></h3>
                     </article>
                 </section>
                 <section class="cuerpo2__productos">
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_colors.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_colors.html" class="cuerpo2__productos__producto__boton">Sonic colors</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_colors.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_colors.html" class="cuerpo2__nombre-boton">Sonic colors</a></h3>
                     </article>
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_lost_world.html" class="cuerpo2__productos__producto__boton">Sonic lost world</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_lost_world.html" class="cuerpo2__nombre-boton">Sonic lost world</a></h3>
                     </article>
                 </section>
             </main>
