--- a/sonic_x_shadow_generations.html
+++ b/sonic_x_shadow_generations.html
@@ -11,17 +11,17 @@
         <body>
             <header class="cabecera">
                 <article class="cabecera__portada">
-                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__portada__logo">
+                    <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                 </article>
                 <nav class="cabecera__navegador">
-                    <input type="checkbox" id="casilla-menu" class="cabecera__navegador__casilla-menu">
-                    <label for="casilla-menu" class="cabecera__navegador__icono-menu">
-                        <i class="cabecera__navegador__icono-menu__barra1"></i>
-                        <i class="cabecera__navegador__icono-menu__barra2"></i>
-                        <i class="cabecera__navegador__icono-menu__barra3"></i>
+                    <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
+                    <label for="casilla-menu" class="cabecera__icono-menu">
+                        <i class="cabecera__barra1"></i>
+                        <i class="cabecera__barra2"></i>
+                        <i class="cabecera__barra3"></i>
                     </label>
-                    <ul class="cabecera__navegador__enlaces">
+                    <ul class="cabecera__enlaces">
                         <li><a href="pagina_principal.html">Pagina principal</a></li>
                         <li><a href="pagina_de_productos.html">Productos</a></li>
                         <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
@@ -31,32 +31,32 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_x_shadow_generations.jpg"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__informacion-producto__imagen-producto"></a>
-                    <article class="cuerpo2__informacion-producto__descripcion-producto">
-                        <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic x Shadow generations</h3>
-                        <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic X Shadow Generations es una remasterización de juego complementario de la versión para consola/PC de Sonic Generations desarrollado por Sonic Team, que incluye un nuevo contenido adicional llamado Shadow Generations</p>
-                        <p><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton">volver</a></p>
+                    <a href="assets/img/sonic_x_shadow_generations.jpg"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__imagen-informacion-producto"></a>
+                    <article class="cuerpo2__descripcion-producto">
+                        <h3 class="cuerpo2__nombre-producto">Sonic x Shadow generations</h3>
+                        <p class="cuerpo2__descripcion">Sonic X Shadow Generations es una remasterización de juego complementario de la versión para consola/PC de Sonic Generations desarrollado por Sonic Team, que incluye un nuevo contenido adicional llamado Shadow Generations</p>
+                        <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso">volver</a></p>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
                 <section class="cuerpo2__productos">
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_unleashed.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_unleashed.html" class="cuerpo2__productos__producto__boton">Sonic unleashed</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_unleashed.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_unleashed.html" class="cuerpo2__nombre-boton">Sonic unleashed</a></h3>
                     </article>
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_mania.png" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_mania.html" class="cuerpo2__productos__producto__boton">Sonic mania</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_mania.png" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_mania.html" class="cuerpo2__nombre-boton">Sonic mania</a></h3>
                     </article>
                 </section>
                 <section class="cuerpo2__productos">
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_superstars.html" class="cuerpo2__productos__producto__boton">Sonic superstars</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_superstars.html" class="cuerpo2__nombre-boton">Sonic superstars</a></h3>
                     </article>
-                    <article class="cuerpo2__productos__producto">
-                        <a href="assets/img/sonic_forces.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3><a href="./sonic_forces.html" class="cuerpo2__productos__producto__boton">Sonic forces</a></h3>
+                    <article class="cuerpo2__producto">
+                        <a href="assets/img/sonic_forces.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__imagen"></a>
+                        <h3><a href="./sonic_forces.html" class="cuerpo2__nombre-boton">Sonic forces</a></h3>
                     </article>
                 </section>
             </main>
